--- a/week2/NewlyCoinedWord/NewlyCoinedWord/Base.lproj/Main.storyboard
+++ b/week2/NewlyCoinedWord/NewlyCoinedWord/Base.lproj/Main.storyboard
@@ -57,7 +57,7 @@
                                             <action selector="wordButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rpr-G3-Le8"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lXK-9G-i9S">
+                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lXK-9G-i9S">
                                         <rect key="frame" x="90.333333333333314" y="0.0" width="80" height="40"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="Button"/>
@@ -65,7 +65,7 @@
                                             <action selector="wordButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Mqh-6y-15i"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GDg-15-ndz">
+                                    <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GDg-15-ndz">
                                         <rect key="frame" x="180.33333333333334" y="0.0" width="80.333333333333343" height="40"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="Button"/>
@@ -73,7 +73,7 @@
                                             <action selector="wordButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="c1S-LY-DsR"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="noM-Ju-3kN">
+                                    <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="noM-Ju-3kN">
                                         <rect key="frame" x="270.66666666666669" y="0.0" width="82.333333333333314" height="40"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="Button"/>
