--- a/week2/LEDBoard/LEDBoard/Base.lproj/Main.storyboard
+++ b/week2/LEDBoard/LEDBoard/Base.lproj/Main.storyboard
@@ -24,11 +24,17 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="textFieldKeyboardTapped:" destination="BYZ-38-t0r" eventType="editingDidEndOnExit" id="8CO-Dx-2Dt"/>
+                                </connections>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z0F-hB-PRq">
                                 <rect key="frame" x="323" y="78.333333333333329" width="50" height="51.333333333333329"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="return" catalog="system" title=""/>
+                                <connections>
+                                    <action selector="returnBtnClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PPn-nS-2YG"/>
+                                </connections>
                             </button>
                             <colorWell contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="393-fh-Ifz">
                                 <rect key="frame" x="276.66666666666669" y="83.333333333333329" width="41.333333333333314" height="41.333333333333329"/>
@@ -45,6 +51,7 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="CWK-HH-607" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="3Jy-vx-dhr"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="CWK-HH-607" secondAttribute="bottom" constant="20" id="4vX-bP-VyL"/>
@@ -61,6 +68,9 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="z2a-7j-NPC" secondAttribute="trailing" constant="20" id="vUz-zA-mKm"/>
                             <constraint firstItem="Z0F-hB-PRq" firstAttribute="trailing" secondItem="z2a-7j-NPC" secondAttribute="trailing" id="zC7-al-HPc"/>
                         </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="lqb-sL-TSZ" appends="YES" id="GpF-sE-b34"/>
+                        </connections>
                     </view>
                     <connections>
                         <outlet property="resultLabel" destination="CWK-HH-607" id="Klt-dS-e8x"/>
@@ -69,6 +79,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="lqb-sL-TSZ">
+                    <connections>
+                        <action selector="tapGestureTapped:" destination="BYZ-38-t0r" id="BAZ-Ya-pMI"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="87.786259541984734" y="-27.464788732394368"/>
         </scene>
