feat: random button 클릭 액션

--- a/week2/LEDBoard/LEDBoard/Base.lproj/Main.storyboard
+++ b/week2/LEDBoard/LEDBoard/Base.lproj/Main.storyboard
@@ -55,6 +55,9 @@
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="questionmark.square.dashed" catalog="system" title=""/>
+                                <connections>
+                                    <action selector="randomColorBtnClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Igu-Lj-gSL"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
